add : add readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,6 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: ordinaryLinuxProgramming
+    tty: true
     volumes:
       - .:/workspace
